src/test/ui/generics/generic-type-more-params-with-defaults.stderr
error[E0107]: this struct takes at most 2 type arguments but 3 type arguments were supplied
  --> $DIR/generic-type-more-params-with-defaults.rs:9:12
   |
LL |     let _: Vec<isize, Heap, bool>;
   |            ^^^            ------ help: remove this type argument
   |            |
   |            expected at most 2 type arguments
   |
note: struct defined here, with at most 2 type parameters: `T`, `A`
  --> $DIR/generic-type-more-params-with-defaults.rs:5:8
   |
LL | struct Vec<T, A = Heap>(
   |        ^^^ -  -

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
